libavformat/hlsenc: Use of uninitialized memory unlinking old files

Fixes ticket#4900

Signed-off-by: DHE <git@dehacked.net>
Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>